objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Campaign_Cell__c</fullName>
        <formula>Campaign.Cell__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Cell_from_Lead__c</fullName>
        <description>Field to record the Campaign cell  from the Lead record when the Campaign Member is first associated</description>
        <inlineHelpText>Field to record the Campaign cell  from the Lead record when the Campaign Member is first associated</inlineHelpText>
        <label>Campaign Cell from Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Tracking_Code__c</fullName>
        <formula>Campaign.Tracking_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Tracking Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to identify if the Campaign member record is created from the cloned lead. Based on this checkbox value, the process rule will be triggered. CRM-13377</description>
        <label>Cloned from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Active_Campaign1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Active_Campaign__c</fullName>
        <formula>Campaign.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Contact_Name__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Description__c</fullName>
        <description>Custom field created to cater for character limitation on Description</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Last_Upd_By__c</fullName>
        <description>Formula to get Last Modified By name</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                    <default>true</default>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Outcome__c</fullName>
        <inlineHelpText>Outcome of Campaign delivery</inlineHelpText>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Responded__c</fullName>
        <formula>IF( OR( ISPICKVAL( ESC_Outcome__c , &apos;Delivered&apos;) , ISPICKVAL( ESC_Outcome__c , &apos;Rejected&apos;) ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Start_Date__c</fullName>
        <description>Formula field to bring Start Date from Campaign to Campaign Member</description>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESC_Status__c</fullName>
        <description>Campaign Member Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-New</fullName>
                </value>
                <value>
                    <fullName>2-In Progress</fullName>
                </value>
                <value>
                    <fullName>3-Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Type__c</fullName>
        <description>Formula field to bring Type from Campaign to Campaign Member</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Organization_Type__c</fullName>
        <description>Field to record the Form Organization Type value from the Lead record when the Campaign Member is first associated</description>
        <inlineHelpText>Field to record the Form Organization Type value from the Lead record when the Campaign Member is first associated</inlineHelpText>
        <label>Form Organization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Delivery_Failure_Date__c</fullName>
        <description>Failure date of the delivery.</description>
        <label>Delivery Failure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Delivery_Failure_Reason__c</fullName>
        <label>Delivery Failure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undelivered</fullName>
                </value>
                <value>
                    <fullName>Person Moved</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Field to record the Line of Business value from the Lead record when the Campaign Member is first associated</description>
        <inlineHelpText>Field to record the Line of Business value from the Lead record when the Campaign Member is first associated</inlineHelpText>
        <label>Line of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud_ID__c</fullName>
        <description>Field to record the Marketing Cloud ID value from the Lead record when the Campaign Member is first associated</description>
        <inlineHelpText>Field to record the Marketing Cloud ID value from the Lead record when the Campaign Member is first associated</inlineHelpText>
        <label>Marketing Cloud ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Code__c</fullName>
        <description>Field to track an individual&apos;s tactic relationship through Hive9 campaign planning system</description>
        <inlineHelpText>Field to track an individual&apos;s tactic relationship through Hive9 campaign planning system</inlineHelpText>
        <label>Media Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Unit__c</fullName>
        <description>Field to record the Operating Unit value from the Lead record when the Campaign Member is first associated</description>
        <inlineHelpText>Field to record the Operating Unit value from the Lead record when the Campaign Member is first associated</inlineHelpText>
        <label>Operating Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_of_Interest__c</fullName>
        <description>Field to record the Product of Interest value from the Lead record when the Campaign Member is first associated</description>
        <inlineHelpText>Field to record the Product of Interest value from the Lead record when the Campaign Member is first associated</inlineHelpText>
        <label>Product of Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_CreatedBy_Name__c</fullName>
        <description>This field is used to store created by name in a text form.</description>
        <label>Source CreatedBy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_Date__c</fullName>
        <description>This field is used to store Source created date in a Date form.</description>
        <label>Source Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Description__c</fullName>
        <description>Field to record the Source Description value from the Lead record when the Campaign Member is first associated</description>
        <inlineHelpText>Field to record the Source Description value from the Lead record when the Campaign Member is first associated</inlineHelpText>
        <label>Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <description>Field to record the Source type value from the Lead record when the Campaign Member is first associated</description>
        <inlineHelpText>Field to record the Source type value from the Lead record when the Campaign Member is first associated</inlineHelpText>
        <label>Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Field to record the Source value from the Lead record when the Campaign Member is first associated</description>
        <inlineHelpText>Field to record the Source value from the Lead record when the Campaign Member is first associated</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tele_Interaction__c</fullName>
        <description>Field to record the Tele Interaction value from the Lead record when the Campaign Member is first associated</description>
        <inlineHelpText>Field to record the Tele Interaction value from the Lead record when the Campaign Member is first associated</inlineHelpText>
        <label>Tele Interaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Text(Campaign.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>